# SakuraEngine

./: -spirv  .gitignore  .gitmodules  CMakeLists.txt  README.md  compile_commands.json  imgui.ini  xmake.lua
SakuraEngine/: CMakeLists.txt  Version.h  Version.h.in  xmake.lua
SakuraEngine/Core/: CMakeLists.txt  Core.h  meta.h  xmake.lua
SakuraEngine/Core/Containers/: Containers.h  MemoryPool.h  SMap.h  SString.h  SVector.h
SakuraEngine/Core/CoreMinimal/: CoreMinimal.h  SFlags.h  SGUID.h  SKeyWords.h  SUUID.h  sinterface.h
SakuraEngine/Core/EngineUtils/: CMakeLists.txt  EngineUtil_All.cpp  EngineUtils.h  SHash.h  fs.h  log.h  os.h  path.h  sstream.h  time.h
SakuraEngine/Core/EngineUtils/Unix/: fs.cc  os.cc  time.cc
SakuraEngine/Core/EngineUtils/Win32/: fs.cpp  time.cpp
SakuraEngine/Editor/: CMakeLists.txt  EditorModule.cpp  MtlDevApp.hpp  MtlTestApplication.hpp  PainterMtlApplication.hpp  RenderGraphTestApplication.hpp  VkTestApplication.hpp  mainmeta.json  meta.h  xmake.lua
SakuraEngine/Editor/Common/: ArrayList.h  HashMap.h  Main.cpp  MetaLib.h  Pool.h
SakuraEngine/Editor/Execute/: CMakeLists.txt  Execute.cpp  Win32Execute.cpp
SakuraEngine/Modules/: CMakeLists.txt
SakuraEngine/Modules/ProjectManagement/: CMakeLists.txt  ProjectManager.hpp
SakuraEngine/Modules/ProjectManagement/src/: ProjectManager.cpp
SakuraEngine/StaticBuilds/: CMakeLists.txt  xmake.lua
SakuraEngine/StaticBuilds/Desperated/GraphicsInterface/CGD/: Profiling.cpp  xmake.lua
SakuraEngine/StaticBuilds/Desperated/GraphicsInterface/CGD_Metal/: AppleWindow.hpp  CGDMetal.hpp  CMakeLists.txt
SakuraEngine/StaticBuilds/Desperated/GraphicsInterface/CGD_Vulkan/: CGDVk_All.cpp  CGD_Vulkan.cpp  xmake.lua
SakuraEngine/StaticBuilds/Desperated/GraphicsInterface/GraphicsCommon/: CGD.h
SakuraEngine/StaticBuilds/Desperated/ImGuiProfiler/: CMakeLists.txt  ImGuiProfiler.hpp
SakuraEngine/StaticBuilds/Desperated/ImGuiProfiler/ImGui/: CMakeLists.txt  xmake.lua
SakuraEngine/StaticBuilds/Engine/: CMakeLists.txt
SakuraEngine/StaticBuilds/Engine/FileManagement/: CMakeLists.txt  FileMetaGenerator.h  FileMetaManager.h
SakuraEngine/StaticBuilds/Engine/FileManagement/src/: FileMetaGenerator.cpp  FileMetaManager.cpp
SakuraEngine/StaticBuilds/Engine/FileMetaGenerator/: CMakeLists.txt  FileMetaGenerator.h
SakuraEngine/StaticBuilds/Engine/FileMetaGenerator/src/: FileMetaGenerator.cpp
SakuraEngine/StaticBuilds/GraphicsInterface/: CMakeLists.txt  meta.h  xmake.lua
SakuraEngine/StaticBuilds/GraphicsInterface/CGD/: CMakeLists.txt  CommandContext.cpp  GpuTimer.cpp
SakuraEngine/StaticBuilds/GraphicsInterface/CGD_Metal/: AppleWindow.mm  CGDMetal.cpp  CGDMetal.hh  CGDMetal.hpp  CGDMetal.mm  CGDMetalAll.mm  CMakeLists.txt
SakuraEngine/StaticBuilds/GraphicsInterface/CGD_Metal/CommandObjects/: CommandBufferMtl.cpp  CommandBufferMtl.h  CommandContextMtl.cpp  CommandContextMtl.h  CommandContextMtl.hh  CommandContextMtl.mm  CommandQueueMtl.cpp  CommandQueueMtl.h
SakuraEngine/StaticBuilds/GraphicsInterface/CGD_Metal/Flags/: FormatMtl.hpp
SakuraEngine/StaticBuilds/GraphicsInterface/CGD_Metal/PipelineObjects/: GraphicsPipelineMtl.cpp  GraphicsPipelineMtl.h  RenderPassMtl.cpp  RenderPassMtl.h  SwapChainMtl.hpp  SwapChainMtl.mm
SakuraEngine/StaticBuilds/GraphicsInterface/CGD_Metal/ResourceObjects/: GpuResourceMtl.cpp  GpuResourceMtl.h  ShaderMtl.cpp  ShaderMtl.h
SakuraEngine/StaticBuilds/GraphicsInterface/CGD_Metal/mtlpp/: mtlpp.hpp  mtlpp.mm
SakuraEngine/StaticBuilds/GraphicsInterface/CGD_Vulkan/: CGD_Vulkan.cpp  CGD_Vulkan.h  CMakeLists.txt
SakuraEngine/StaticBuilds/GraphicsInterface/CGD_Vulkan/CommandObjects/: CommandBufferVk.cpp  CommandBufferVk.h  CommandContextVk.cpp  CommandContextVk.h  CommandQueueVk.cpp  CommandQueueVk.h
SakuraEngine/StaticBuilds/GraphicsInterface/CGD_Vulkan/Flags/: GraphicsPipelineStatesVk.h
SakuraEngine/StaticBuilds/GraphicsInterface/CGD_Vulkan/GraphicsObjects/: ComputePipelineVk.cpp  ComputePipelineVk.h  FenceVk.cpp  GraphicsPipelineVk.cpp  GraphicsPipelineVk.h  RenderPassVk.h  RootSignatureVk.cpp  RootSignatureVk.h
SakuraEngine/StaticBuilds/GraphicsInterface/CGD_Vulkan/ResourceObjects/: GpuResourceVk.cpp  GpuResourceVk.h  ResourceViewVk.cpp  ResourceViewVk.h  ShaderVk.cpp
SakuraEngine/StaticBuilds/GraphicsInterface/GraphicsCommon/: CGD.h  GpuTimer.h
SakuraEngine/StaticBuilds/GraphicsInterface/GraphicsCommon/CommandObjects/: CommandBuffer.h  CommandContext.h  CommandQueue.h  Profiling.h
SakuraEngine/StaticBuilds/GraphicsInterface/GraphicsCommon/Flags/: Format.h  GraphicsPipelineStates.h
SakuraEngine/StaticBuilds/ImGuiProfiler/: CMakeLists.txt  ImGuiProfiler.hpp  ImGuiVulkanSDL.cpp  ImGuiVulkanSDL.h  xmake.lua
SakuraEngine/StaticBuilds/ImGuiProfiler/ImGui/: imgui.cpp  imgui.h
SakuraEngine/StaticBuilds/Painter/: CMakeLists.txt
SakuraEngine/StaticBuilds/Painter/Include/: CommandBuffer.h  Extension.h  GPUResource.h  Painter.h  PainterStructures.h  RenderPass.h  RenderPipeline.h  SDLSupport.h  SakuraPainter.h  Shader.h  SwapChain.h
SakuraEngine/StaticBuilds/Painter/Source/: Painter.cpp  SDLSupport.mm  ShaderTranslator.cpp
SakuraEngine/StaticBuilds/PixelOperators/: ImageUtils.h
SakuraEngine/StaticBuilds/RenderGraph/: CMakeLists.txt  GraphPassNode.h
SakuraEngine/StaticBuilds/Runtime/: CMakeLists.txt
SakuraEngine/StaticBuilds/Runtime/FileManagement/: CMakeLists.txt  FileMetaGenerator.h  FileMetaManager.h  VirtualFileSystem.h  yaml.hpp
SakuraEngine/StaticBuilds/Runtime/Painter/: CMakeLists.txt
SakuraEngine/StaticBuilds/Runtime/RenderGraph/: CMakeLists.txt  GraphPassNode.h  RenderGraph.cpp  RenderGraph.h
SakuraEngine/StaticBuilds/Runtime/SakuraWorld/: SakuraWorld.cpp
SakuraEngine/StaticBuilds/TaskSystem/: CMakeLists.txt  TaskSystem.h
SakuraEngine/Tools/: CMakeLists.txt
SakuraEngine/Tools/DirectXShaderCompiler/: CMakeLists.txt
SakuraEngine/Tools/DirectXShaderCompiler/binaries/: .gitignore
SakuraEngine/Tools/SPIRV-Cross/: CMakeLists.txt
SakuraEngine/Tools/SPIRV-Cross/binaries/: .gitignore
SakuraEngine/UnitTests/: CMakeLists.txt
(+214 files in other folders)
